...
  const MuscleSetUsage(this.exerciseName, this.bodyPart);
  final String exerciseName;
  final String bodyPart;
}

const exerciseMuscleProfiles = <String, ExerciseMuscleProfile>{
  'インクラインフライマシン': ExerciseMuscleProfile(
    primary: [MuscleRegion.pectoralisMajor],
    secondary: [MuscleRegion.anteriorDeltoid],
  ),
  'ベンチプレス': ExerciseMuscleProfile(
    primary: [MuscleRegion.pectoralisMajor],
    secondary: [MuscleRegion.anteriorDeltoid, MuscleRegion.triceps],
...
